# homeassistant-husqvarna

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
custom_components/husqvarna/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_tracker.py  entity.py  lawn_mower.py  manifest.json  number.py  sensor.py  services.yaml
custom_components/husqvarna/translations/: en.json
docs/: ARCHITECTURE.md  HUSQVARNA_API_NOTES.md  openapi-automower-connect-v1.0.yaml
pyhusqvarna/: __init__.py  auth.py  exceptions.py  ws.py
pyhusqvarna/api/: __init__.py  automower.py
pyhusqvarna/models/: __init__.py  automower.py  base.py
tests/: test_auth.py  test_automower_client.py  test_models.py
